# Q

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  IO.py  MANIFEST.in  Makefile  README.md  TODO.txt  build.py  build_gcc_offload.sh  defaults.py  environment.yml  functions.py  install  install.py  integrate.cu  integrate.h  main.cu  nonbonded.cu  nonbonded.h  parse.cu  parse.h  pyproject.toml  qanalyse.py  qatoms.h  qdyn.py  qprep.py  restraints.cu  restraints.h  setup.py  solvent.cu  solvent.h  system.cu  system.h  topology.py  utils.cu
app/: QligFEP.py  QmapFEP.html  QmapFEP.py  testSMintermgen.py
benchmark/: README.md
benchmark-old/FEP_ligand_binding/2.Q7/: .gitignore  setup.py  submit.py
benchmark-qgpu/: benchmark_report.html.j2  benchmark_report.py  benchmark_run.py  main.py
benchmark/FEP_ligand_binding/: README.md
benchmark/FEP_ligand_binding/2.Q7/: setup.py  submit.py
benchmark/FEP_solvation/2.Q-gpu/: setup.py
benchmark/FEP_solvation/2.Q7/: setup.py  submit.py
benchmark/ethanol-methane/2.water/: FEP1.fep
benchmark/water/: runBENCHMARK.py
data/QmapFEP/maps/: CDK2_network.txt
david-refactor_notebooks/: restraint_setting.py
dockerfiles/q-fortran/: Dockerfile
env/: SMinterm.yml  qligfep-benchmark.yml
notebook/: .nx.html  0.QmapFEP.ipynb  QligFEP.ipynb  Rgroup-highlights.ipynb  analyze_map.py  d3-simple-example.js  mcs_align.ipynb  nx.html  qligfep_benchmarking.ipynb  run.py  test.html  test2.html  tmp.html
notebook/.ipynb_checkpoints/: 0.QmapFEP-checkpoint.ipynb  Rgroup-highlights-checkpoint.ipynb  mcs_align-checkpoint.ipynb  qligfep_benchmarking-checkpoint.ipynb
qligfep-old/: QligFEP.py  openff2Q.py  protprep.py  settings.py
share/: IO.py  compare.py  md.py  settings.py  topology.py
src/: QligFEP.py  QmapFEP.html  QmapFEP.py  SMintermgenFEP.py  makefile  md.f90  notes.txt  qanalyse.py  qcalc.f90  qcalc.py  qdyn.py  qfep.f90  qfep.py
src/Qgpu/: IO.py  Rgroup.py  calc.py  ccc.py  compare.py  energy.py  fep.py  mask.py  md.py  restart.py  topology.py  trajectory.py
src/QligFEP/: IO.py  QLIE.py  QresFEP.py  __init__.py  analyze_FEP.py  chemIO.py  functions.py  lig_aligner.py  logger.py  openff2Q.py  opls2Q.py  pdb_utils.py  protprep.py  qligfep.py  qmapfep.py  visualization.py
src/QligFEP/CLI/: _popc_utils.py  aa_atom_rename.py  cog_cli.py  lig_align_cli.py  lomap_wrap_cli.py  parser_base.py  pdb_to_amber.py  qligfep_cli.py  qmapfep_cli.py  qparams_cli.py  qprep_cli.py  setupFEP.py  utils.py
src/QligFEP/FF/: AMBER14sb.lib  README.md  (+3 more)
src/core/: Makefile  bonded.cu  bonded.h  cutoff.h  main.cu  nonbonded.cu  nonbonded.h  parse.cu  parse.h  qatoms.cu  qatoms.h  restraints.cu  restraints.h  shake.cu  shake.h  solvent.cu  solvent.h  system.cu  system.h  utils.cu  utils.h
src/kcombu/: README.md
src/q6/: compile.sh  makefile  prep.f90  qfep.f90
src/qligfep-newbin-unfinished/: QligFEP.py  QmapFEP.py  qdyn.py
src/share/: IO.py  calc.py  ccc.py  compare.py  defaults.py  energy.py  fep.py  md.py  plot.py  qanalyse.py  settings.py  topology.py  trajectory.py
test/: ._O2.prm  ._butane.prm  README.md  cleanup.py  runTEST.py
test/1.interactions/: runTEST.py  run_all.py
test/Na-Cl/: FEP1.fep  OPLS2015_ethane_ethanol_merged.prm  dualtop.top  eq1.inp
test/boundary/: README.md
test/butane/: angles.csv  atypes.csv  bonds.csv  cangles.csv  catypes.csv  cbonds.csv  ccharges.csv  charges.csv  coords.csv  ctorsions.csv  md.csv  md01.inp  ngbrs14.csv  ngbrs23.csv  topo.csv  torsions.csv
test/cdk2/: eq1.inp
test/ethane-ethanol/: FEP1.fep  README.md  dualtop.top  eq1.inp  ethane.prm  ethanol.lib  ethanol.prm  generate_list.py  q_atoms.csv  q_atypes.csv  q_catypes.csv  q_charges.csv  q_softcores.csv  run_test.py
test/improper_test/: run_test.py
test/polypeptide/: README.md
test/q-p_benzene/: eq1.inp
test/solvation_energies/: README.md  run_test.py  seds
test/thrombin/: eq1.inp
test/w-w/: eq1.inp
test/water/: .run_test.py.swp  README.md  run_test.py  submit.sh
test_big/: FEP_submit.sh
test_big/inputfiles/: AMBER14sb_ejm_31_ejm_42_merged.prm  FEP1.fep  ejm_31.lib  ejm_42_renumber.lib  eq1.inp  eq3.inp  md_0000_1000.inp  md_0002_0998.inp  md_0004_0996.inp  md_0005_0995.inp  md_0007_0993.inp  md_0010_0990.inp  md_0014_0986.inp  md_0017_0983.inp  md_0021_0979.inp  md_0024_0976.inp  md_0026_0974.inp  md_0031_0969.inp  md_0033_0967.inp  md_0042_0958.inp  md_0045_0955.inp  md_0060_0940.inp  md_0065_0935.inp  md_0070_0930.inp  md_0075_0925.inp  md_0081_0919.inp  md_0095_0905.inp  md_0103_0897.inp  md_0162_0838.inp  md_0200_0800.inp  md_0225_0775.inp  md_0256_0744.inp  md_0294_0706.inp  md_0408_0592.inp  md_0500_0500.inp  md_0821_0179.inp  md_0838_0162.inp  md_0854_0146.inp  md_0867_0133.inp  md_0912_0088.inp  (+20 more)
test_small/: dc3.inp  dc5.inp  eq3.inp  eq4.inp  run_test_nompi.sh
tests/: readme.md
tests/test1/: run_test_mpi.sh  test2slurm.sh
tests/test1_short/: run_test_nompi.sh  test2slurm.sh
tutorials/CCR2/: README.md  aligned_ligands.sdf
tutorials/Tyk2/: README.md
water_optimized/Q/: .gitignore  CMakeLists.txt  multiple_run.py  test_gpu.slurm
water_optimized/Q/analysis_script/: a5.py  analysis2.py  analysis3.py  analysis4.py  analysis5.py  analysis6.py  analysis7.py  analysis8.py
water_optimized/Q/nonbounded_experimental_code/: old.cu  readme.md  v1.cu  v2.cu  v3.cu  v4.cu
water_optimized/Q/profiler/: exp_1_profile_result.ncu-rep  exp_3_profile_result.ncu-rep  readme.md
water_optimized/Q/src/core/: Makefile  solvent.cu  solvent.h
(+532 files in other folders)
