[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QligFEP"
dynamic = ["version"]
description = "Python CLI designed to facilitate a robust and fast setup of free energy perturbation (FEP)."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
# keywords = [""]
authors = [{ name = "Willem Jespers", email = "w.jespers@lacdr.leidenuniv.nl" }]
# maintainers = [{ name = "", email = "" }] # TODO
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10" # todo: might have other versions
]
dependencies = [
    "numpy",
    "matplotlib",
    "rdkit",
    "scikit-learn",
    "loguru",
    "MolClusterkit @ git+https://github.com/David-Araripe/MolClusterkit.git#master",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["QligFEP", "Qgpu"]

[tool.setuptools.dynamic]
version = {attr = "QligFEP.__version__"}

[tool.setuptools_scm]
write_to = "src/QligFEP/_version.py"

[project.urls]
repository = "https://github.com/qusers/qligfep"
# homepage = "https://github.com/to-do/replace-me"

[project.scripts]
qligfep = "QligFEP.CLI.qligfep_cli:main_exe"
qmapfep = "QligFEP.CLI.qmapfep_cli:main_exe"
setupFEP = "QligFEP.CLI.setupFEP:main_exe"
qparams = "QligFEP.CLI.qparams_cli:main_exe"
qlomap = "QligFEP.CLI.lomap_wrap_cli:main_exe"
pdb2amber = "QligFEP.CLI.pdb_to_amber:main_exe"
qligfep_analyze = "QligFEP.analyze_FEP:main_exe"
qprep_prot = "QligFEP.CLI.qprep_cli:main_exe"
qcog = "QligFEP.CLI.cog_cli:main_exe"
ligalign = "QligFEP.CLI.lig_align_cli:main_exe"